# GameOfLife

./: Cargo.toml
src/: game.rs  lib.rs  main.rs
src/game/: cell_state_rule.rs  game.rs  game_of_life.rs  mod.rs
src/utils/: print_utils.rs
