[package]
name = "GameOfLife"
version = "0.1.0"
edition = "2021"

[dependencies]
log-update = "0.1.0"
nalgebra = "0.32.2"
stylist = {vesion="0.12.0", features = ["yew","yew_integration"]}
yew = {version = "0.20.0", features = ["csr"]}

[[bin]]
name = "terminal"
path = "src/bin/terminal.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"
